--- a/.github/workflows/build-n-release.yml
+++ b/.github/workflows/build-n-release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: tools/xraydatbuilder/src/go.mod
+          go-version-file: go.mod
 
       - name: Build v2data
         run: |
