--- a/.github/workflows/build-n-release.yml
+++ b/.github/workflows/build-n-release.yml
@@ -34,11 +34,11 @@ jobs:
         with:
           go-version-file: go.mod
 
-      - name: Build v2data
+      - name: Build v2dat
         run: |
           chmod +x ./build.sh
           ./build.sh
-          tar -czf ./v2data.tar.gz -C ./dist .
+          tar -czf ./v2dat.tar.gz -C ./dist .
 
       - name: Create GitHub Release
         id: create_release
@@ -57,6 +57,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: v2data.tar.gz
-          asset_name: v2data.tar.gz
+          asset_path: v2dat.tar.gz
+          asset_name: v2dat.tar.gz
           asset_content_type: application/gzip
