--- a/.github/workflows/build-n-release.yml
+++ b/.github/workflows/build-n-release.yml
@@ -4,23 +4,25 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Release version"
+        description: Release version
         required: true
-        default: "1.0.0"
+        default: 2.0.0
       draft:
-        description: "Save the release as a draft first?"
+        description: Save the release as a draft first?
         required: false
         default: false
         type: boolean
-
       prerelease:
-        description: "Mark this build as a pre-release?"
+        description: Mark this build as a pre-release?
         required: false
         default: false
         type: boolean
 
 permissions:
   contents: write
+
+env:
+  VERSION: ${{ inputs.version }}
 
 jobs:
   build-and-release:
@@ -38,69 +40,22 @@ jobs:
         run: |
           chmod +x ./build.sh
           ./build.sh
-          tar -czf ./v2dat.tar.gz -C ./dist/armv5 .
-          tar -czf ./v2dat-armv5.tar.gz -C ./dist/armv5 .
-          tar -czf ./v2dat-armv7.tar.gz -C ./dist/armv7 .
-          tar -czf ./v2dat-mipsle.tar.gz -C ./dist/mipsle .
-          tar -czf ./v2dat-arm64.tar.gz -C ./dist/arm64 .
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ github.event.inputs.version }}
-          release_name: "Release ${{ github.event.inputs.version }}"
-          draft: ${{ github.event.inputs.draft == 'true' }}
-          prerelease: ${{ github.event.inputs.prerelease == 'true' }}
+      - name: Export asset list
+        run: |
+          echo "ASSET_FILES=$(ls dist/assets/*.tar.gz | tr '\n' ' ')" >> $GITHUB_ENV
 
-      - name: Upload v2dat
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload files to Artifacts
+        uses: actions/upload-artifact@v4
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: v2dat.tar.gz
-          asset_name: v2dat.tar.gz
-          asset_content_type: application/gzip
+          name: v2dat-${{ env.VERSION }}
+          path: ${{ env.ASSET_FILES }}
 
-      - name: Upload v2dat-armv5
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create or update release
+        uses: softprops/action-gh-release@v2
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: v2dat-armv5.tar.gz
-          asset_name: v2dat-armv5.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload v2dat-armv7
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: v2dat-armv7.tar.gz
-          asset_name: v2dat-armv7.tar.gz
-          asset_content_type: application/gzip
-      
-      - name: Upload v2dat-mipsle
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: v2dat-mipsle.tar.gz
-          asset_name: v2dat-mipsle.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload v2dat-arm64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: v2dat-arm64.tar.gz
-          asset_name: v2dat-arm64.tar.gz
-          asset_content_type: application/gzip  
+          tag_name: v${{ env.VERSION }}
+          name: v${{ env.VERSION }}
+          draft: ${{ inputs.draft }}
+          prerelease: ${{ inputs.prerelease }}
+          files: ${{ env.ASSET_FILES }}
